Добавление библиотеки nlohmann/json

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "external/tmxlite"]
 	path = external/tmxlite
 	url = https://github.com/fallahn/tmxlite.git
+[submodule "external/json"]
+	path = external/json
+	url = https://github.com/nlohmann/json.git
